# preply-account-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
docs/: implementation-plan.md  reverse-engineering-notes.md
src/preply_cli/: analysis.py  browser.py  cli.py  client.py  formatting.py  queries.py
tests/: test_analysis.py  test_browser.py  test_formatting.py  test_queries.py
